--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ document.onkeydown = function (event) {
 
                     <script>
                     // Set the date we're counting down to
-                    var countDownDate = new Date("Jan 01, 2023 00:00:00").getTime();
+                    var countDownDate = new Date("Jan 01, 2023 12:00:00").getTime();
                     
                     // Update the count down every 1 second
                     var x = setInterval(function() {
@@ -167,7 +167,7 @@ document.onkeydown = function (event) {
                       // If the count down is over, write some text 
                       if (distance < 0) {
                         clearInterval(x);
-                        document.getElementById("demo").innerHTML = "Launched";
+                        document.getElementById("demo").innerHTML = "Happy New Year 🎊🎉🥳";
                       }
                     }, 1000);
                     </script>
