--- a/New Site 2023/Our vision.html
+++ b/New Site 2023/Our vision.html
@@ -34,6 +34,12 @@ Anyone can have a dream. However, it's the process robustness' and dedication of
   
 </head>
 <body>
+
+<div class="load" id="load">
+<img src="assets/images/tdt.gif" alt="" class="load__gif" ondragstart="return false;">
+</div>
+
+<div class="disable">
   
   <section data-bs-version="5.1" class="menu menu3 cid-trckItaAuQ" once="menu" id="menu3-4f">
     
@@ -292,7 +298,7 @@ Anyone can have a dream. However, it's the process robustness' and dedication of
             </div>
             <div class="col-12 mt-4">
                 <p class="mbr-text mb-0 mbr-fonts-style copyright align-center display-7">
-                    © Copyright 2022  <a href="index.html#top" class="text-black" style="">BKK's Agro Foods</a> - All Rights Reserved <br>Powered by -&nbsp;❤️<a href="https://bit.ly/thedteam" class="text-black" target="_blank" style="">The 'D Team</a>&nbsp;</p>
+                    © 2022  <a href="index.html#top" class="text-black" style="">BKK's Agro Foods</a> - All Rights Reserved <br>Powered by -&nbsp;❤️<a href="https://bit.ly/thedteam" class="text-black" target="_blank" style="">The 'D Team</a>&nbsp;</p>
             </div>
         </div>
     </div>
@@ -332,9 +338,10 @@ Anyone can have a dream. However, it's the process robustness' and dedication of
        </h10>				
     </div>
   </div>  
-</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/viewportchecker/viewportchecker.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/viewportchecker/viewportchecker.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets\mobirise\js\preloader.js"></script> 
   
   
   <input name="animation" type="hidden">
+</div>
   </body>
 </html>
