--- a/newsite.html
+++ b/newsite.html
@@ -8,20 +8,10 @@
 </head>
 <body>
 
-<iframe src="https://thedteam.github.io/BKKsAgroFoods/New%20Site%202023" style="border:none;     margin: none;
-padding: none;
+<iframe src="https://thedteam.github.io/BKKsAgroFoods/New%20Site%202023" style="border:none;     margin: 0px;
+padding: 0px;
 background: rgb(255, 255, 255); /* this is just to make the frames easier to see */
 border: none;" name="iframe_a" height="720" width="100%" title="Iframe Example"></iframe>
-
-<style>
-    html, body {
-    margin: 0px;
-    padding: 0px;
-    border: 0px;
-    width: 100%;
-    height: 100%;
-}
-</style>
 
     
 </body>
