--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ document.onkeydown = function (event) {
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/BKKs Agro Foods Logo.jpeg" alt="" ondragstart="return false;" style="height: 8rem;">
+                        <img src="assets/images/BKKs Agro Foods Logo.png" alt="" ondragstart="return false;" style="height: 8rem;">
                     </a>
                 </span>
                 
