--- a/New Site 2023/Products.Coming.Soon.html
+++ b/New Site 2023/Products.Coming.Soon.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image:src" content="assets/images/bkks-agro-foods-logo.jpeg">
-  <meta property="og:image" content="assets/images/bkks-agro-foods-logo.jpeg">
+  <meta name="twitter:image:src" content="assets/images/bkks-agro-foods-logo.jpg">
+  <meta property="og:image" content="assets/images/bkks-agro-foods-logo.jpg">
   <meta name="twitter:title" content="Products Coming Soon..">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
-  <link rel="shortcut icon" href="assets/images/bkks-agro-foods-logo.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/bkks-agro-foods-logo.jpg" type="image/x-icon">
   <meta name="description" content="Our Vision in BKK's Agro Foods is to provide high quality premium everyday fresh food products while maintaining the authenticity and tradition of these recipes in the fast paced current lifestyles. As a customer of BKK's Agro Foods you can always count on us to deliver quality as we use no preservatives or food enhancing chemicals in any of our fresh food range of products from the food processing plant till it reaches your home prepared with love and served on the table by your loved ones, we make sure everything we make and every step of the processes involved follows two basic rules — "Keep it NATURAL and Keep it CLEAN".
 Anyone can have a dream. However, it's the process robustness' and dedication of trained and passionate team that makes the dream come true. At BKK's Agro Foods, we are passionate about the work that we do. Every product that we make is made with love. We believe in agility, transparency, and discipline. Our foods products are special. We've poured our love into them by using only natural ingredients and keeping it preservative-free all the way. With our new motto # WE MAKE BATTER BETTER, we look to redefine the language of love, through food.">
   
@@ -48,7 +48,7 @@ Anyone can have a dream. However, it's the process robustness' and dedication of
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/bkks-agro-foods-logo.jpeg" alt="Logo" style="height: 5rem;" ondragstart="return false;">
+                        <img src="assets/images/bkks-agro-foods-logo.jpg" alt="Logo" style="height: 5rem;" ondragstart="return false;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html">BKK's Agro Foods</a></span>
