--- a/New Site 2023/blog.html
+++ b/New Site 2023/blog.html
@@ -11,8 +11,7 @@
   <meta name="twitter:title" content="Blog">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
   <link rel="shortcut icon" href="assets/images/bkks-agro-foods-logo.jpg" type="image/x-icon">
-  <meta name="description" content="Our Vision in BKK's Agro Foods is to provide high quality premium everyday fresh food products while maintaining the authenticity and tradition of these recipes in the fast paced current lifestyles. As a customer of BKK's Agro Foods you can always count on us to deliver quality as we use no preservatives or food enhancing chemicals in any of our fresh food range of products from the food processing plant till it reaches your home prepared with love and served on the table by your loved ones, we make sure everything we make and every step of the processes involved follows two basic rules — "Keep it NATURAL and Keep it CLEAN".
-Anyone can have a dream. However, it's the process robustness' and dedication of trained and passionate team that makes the dream come true. At BKK's Agro Foods, we are passionate about the work that we do. Every product that we make is made with love. We believe in agility, transparency, and discipline. Our foods products are special. We've poured our love into them by using only natural ingredients and keeping it preservative-free all the way. With our new motto # WE MAKE BATTER BETTER, we look to redefine the language of love, through food.">
+  <meta name="description" content="BKK’s Agro Foods Is a blue veteran enterprise to influence the way we approach nutrition by bringing to you produce that is naturally healthy and full of flavor. We strongly believe that “Happiness is homemade and Life is a combination of love and home cooked food".">
   
   
   <title>Blog</title>
@@ -295,7 +294,7 @@ Anyone can have a dream. However, it's the process robustness' and dedication of
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>About</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">BKK's Agro Foods Is a blue veteran initiative to influence the way we approach nutrition by bringing to you produce that is naturally healthy and full of flavor. We believe that Happiness is homemade and Life is a combination of love and home cooked food.</p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7"><b>BKK’s Agro Foods </b>Is a blue veteran enterprise to influence the way we approach nutrition by bringing to you produce that is naturally healthy and full of flavor. We strongly believe that <b>“Happiness is homemade and Life is a combination of love and home cooked food".</b></p>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-7">
                     <strong>Follow Us</strong>
                 </h5>
