--- a/New Site 2023/blog.html
+++ b/New Site 2023/blog.html
@@ -124,7 +124,7 @@
     <div class="container scrollanimation animate__animated animate__delay-0s animate__duration-0s animate__slower animate__repeat-1">
         <div class="row">
             <div class="col-lg-12 img-col">
-                <img src="assets/images/mbr-2-1920x1280.jpeg" alt="Dosa" ondragstart="return false;">
+                <img src="assets/images/Blog/Blog1.jpg" alt="Dosa" ondragstart="return false;">
                 <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-success display-4" href="blog.html#animateContent8-46"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>READ MORE</a></div>
             </div>
             <div class="col-lg-5 title-col align-left">
@@ -136,10 +136,59 @@
 
             <div class="col-lg-7 text-col align-left">
                 <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">South India is a vast, diverse region with a cuisine that has captured the minds of many. The popularity of South Indian staples such as idly and Dosa has transcended geographical boundaries, and has now found fans across the globe. It has not only limited to breakfast but found a unique time and space for all day food due to its versatility. Many South Indian breakfast delicacies are so unique, that you wouldn’t find their counterparts elsewhere. A quintessential South Indian breakfast is a treasure of vital nutrients, minerals and antioxidants. 
-<br>South Indian food items are mainly fermented which are healthy and are rich in probiotics for gut microbiota especially idly, Dosa, Uttapam, etc. Fermentation improves digestibility, enhances B vitamins and boosts the immune system. Apart from tingling our taste buds, South Indian cuisine for a long time, have ruled our palates and cuisine, given their simple yet exotic taste and of course health benefits.
-<br>Fermentation is making use of the right kind of bacteria, microbes and sugars for food preservation. Different fruits, vegetables and rice can be fermented to elevate their health benefits. Consuming fermented foods on a daily basis ensures one is at an arm’s length from obesity. It controls hypersensitivity and keeps one’s cholesterols levels in check thus, safe to say that heart diseases can be forgone for a while. Coupling fermented foods with daily and regular exercises are all one needs to keep in their bag of personal fitness program. Fermented foods ensure the sugars only have health benefits to offer and is highly recommended to diabetic patients. Moreover, in the era of incurable diseases especially caught by the consumption of inorganic foods, fermented foods keep cancers and tumors in check.
-<br>Local ingredients like coconut, bananas and curry leaves are also used generously in the South Indian cuisine. A delish chutney or relish that is almost, always served with South Indian food is chutney. Coconut is packed with many health benefits, it is rich in fibre with plenty of antioxidants and minerals.  
-<br>South Indian cuisine is popular all over India, with many dishes being a staple for people for people from different regions. Though it is a healthy food option, people who are watching their weight need to keep a tab on their calorie intake even from these foods. We share with you a list of calories of Indian Dishes.&nbsp;<br></p>
+</p>
+
+            </div>
+
+            <div class="col-lg-5 title-col align-left">
+                <div class="title-wrap">
+                    <h3 class="number mbr-medium mbr-black pb-2 mbr-fonts-style display-7">02</h3>
+                    <h2 class="mbr-section-title mbr-semibold mbr-black mbr-fonts-style display-2"><img src="assets/images/Blog/Blog2.jpeg" alt="Dosa" ondragstart="return false;"></h2>
+                </div>
+            </div>
+
+            <div class="col-lg-7 text-col align-left">
+                <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7"><br>South Indian food items are mainly fermented which are healthy and are rich in probiotics for gut microbiota especially idly, Dosa, Uttapam, etc. Fermentation improves digestibility, enhances B vitamins and boosts the immune system. Apart from tingling our taste buds, South Indian cuisine for a long time, have ruled our palates and cuisine, given their simple yet exotic taste and of course health benefits. <br>Fermentation is making use of the right kind of bacteria, microbes and sugars for food preservation. Different fruits, vegetables and rice can be fermented to elevate their health benefits.
+</p>
+
+            </div>
+
+            <div class="col-lg-5 title-col align-left">
+                <div class="title-wrap">
+                    <h3 class="number mbr-medium mbr-black pb-2 mbr-fonts-style display-7">03</h3>
+                    <h2 class="mbr-section-title mbr-semibold mbr-black mbr-fonts-style display-2"><img src="assets/images/Blog/Blog3.png" alt="Dosa" ondragstart="return false;"></h2>
+                </div>
+            </div>
+
+            <div class="col-lg-7 text-col align-left">
+                <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">Fermentation is making use of the right kind of bacteria, microbes and sugars for food preservation. Different fruits, vegetables and rice can be fermented to elevate their health benefits. Consuming fermented foods on a daily basis ensures one is at an arm’s length from obesity. It controls hypersensitivity and keeps one’s cholesterols levels in check thus, safe to say that heart diseases can be forgone for a while. Coupling fermented foods with daily and regular exercises are all one needs to keep in their bag of personal fitness program. Fermented foods ensure the sugars only have health benefits to offer and is highly recommended to diabetic patients. Moreover, in the era of incurable diseases especially caught by the consumption of inorganic foods, fermented foods keep cancers and tumors in check.
+</p>
+
+            </div>
+
+            <div class="col-lg-5 title-col align-left">
+                <div class="title-wrap">
+                    <h3 class="number mbr-medium mbr-black pb-2 mbr-fonts-style display-7">04</h3>
+                    <h2 class="mbr-section-title mbr-semibold mbr-black mbr-fonts-style display-2"><img src="assets/images/Blog/Blog4.jpg" alt="Dosa" ondragstart="return false;"></h2>
+                </div>
+            </div>
+
+            <div class="col-lg-7 text-col align-left">
+                <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">Local ingredients like coconut, bananas and curry leaves are also used generously in the South Indian cuisine. A delish chutney or relish that is almost, always served with South Indian food is chutney. Coconut is packed with many health benefits, it is rich in fibre with plenty of antioxidants and minerals.  
+</p>
+
+            </div>
+
+            <div class="col-lg-5 title-col align-left">
+                <div class="title-wrap">
+                    <h3 class="number mbr-medium mbr-black pb-2 mbr-fonts-style display-7">05</h3>
+                    <h2 class="mbr-section-title mbr-semibold mbr-black mbr-fonts-style display-2"><img src="assets/images/Blog/Blog5.jpg" alt="Dosa" ondragstart="return false;"></h2>
+                </div>
+            </div>
+
+            <div class="col-lg-7 text-col align-left">
+                <p class="mbr-text mbr-black mbr-regular mbr-light mbr-fonts-style display-7">South Indian cuisine is popular all over India, with many dishes being a staple for people for people from different regions. Though it is a healthy food option, people who are watching their weight need to keep a tab on their calorie intake even from these foods. We share with you a list of calories of Indian Dishes.
+</p>
 
             </div>
 
