--- a/New Site 2023/blog.html
+++ b/New Site 2023/blog.html
@@ -130,7 +130,8 @@
             <div class="col-lg-5 title-col align-left">
                 <div class="title-wrap">
                     <h3 class="number mbr-medium mbr-black pb-2 mbr-fonts-style display-7">01</h3>
-                    <h2 class="mbr-section-title mbr-semibold mbr-black mbr-fonts-style display-2">South Indian Cuisine</h2>
+                    <h2 class="mbr-section-title mbr-semibold mbr-black mbr-fonts-style display-2">South Indian Cuisine
+<img src="assets/images/mbr-2-1920x1280.jpeg" alt="Dosa" ondragstart="return false;"></h2>
                 </div>
             </div>
 
