--- a/New Site 2023/Healthy.Millet.Idly&Dosa.batter.html
+++ b/New Site 2023/Healthy.Millet.Idly&Dosa.batter.html
@@ -231,7 +231,7 @@
                         </div>
                         <div id="collapse1_53" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_53">
                             <div class="panel-body">
-                                <p class="mbr-fonts-style panel-text display-4"><strong>Rice, Urad Dal, Salt &amp; RO Water.</strong><br></p>
+                                <p class="mbr-fonts-style panel-text display-4"><strong>Koda Millet, Little Millet, Bamyard Millet, Sorghum / Jowar, Ponny Idly Rice, Urad Dal, Salt & RO Water.</strong><br></p>
                             </div>
                         </div>
                     </div>
