--- a/New Site 2023/index.html
+++ b/New Site 2023/index.html
@@ -34,6 +34,10 @@ Our Products:
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/animate-css/css/animate.css">
+  <link rel="stylesheet" href="assets/animate-css/css/animate.compat.css">
+  <link rel="stylesheet" href="assets/animate-css/css/animate.min.css">
+  <link rel="stylesheet" href="assets/animate-css/css/animation_utility.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -434,7 +438,7 @@ Anyone can have a dream. However, it’s the process robustness’ and dedicatio
 <section class="animateContent6 extСontent cid-tr7OhL6LSS" id="SouthIndianCuisine">
     
     
-    <div class="container scrollanimation animate__animated animate__delay-0s animate__duration-0s animate__slower animate__repeat-1">
+    <div class="container slideInLeft scrollanimation animate__animated animate__delay-0s animate__duration-0s animate__slower animate__repeat-1">
         <div class="row">
             <div class="col-lg-12 img-col">
                 <img src="assets/images/Blog/Blog1.jpg" alt="Dosa" ondragstart="return false;">
@@ -777,7 +781,7 @@ Anyone can have a dream. However, it’s the process robustness’ and dedicatio
        </h10>				
     </div>
   </div>  
-</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/viewportchecker/viewportchecker.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>      <script src="assets\mobirise\js\preloader.js"></script>                    
+</section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/viewportchecker/viewportchecker.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>      <script src="assets\mobirise\js\preloader.js"></script>    <script src="assets/animate-css/js/oyethemes_onscroll_animation.js"></script>                
   
   
   <input name="animation" type="hidden">
