--- a/New Site 2023/index.html
+++ b/New Site 2023/index.html
@@ -195,7 +195,7 @@ Our Products:
                             <div class="col-sm-6 col-lg-4">
                                 <div class="card-wrap">
                                     <div class="image-wrap">
-                                        <img src="assets/images/Founder2.jpeg" alt="Founder">
+                                        <img src="assets/images/Founder2.jpeg" alt="Founder" ondragstart="return false;">
                                         <strong style="font-size: 25px; color: #000;">Bindu Krishna Kumar</strong> <br><strong style="font-size: 20px; color: #000;">Founder</strong>
                                     </div>
 
@@ -205,7 +205,7 @@ Our Products:
                             <div class="col-sm-6 col-lg-4">
                                 <div class="card-wrap">
                                     <div class="image-wrap">
-                                        <img src="assets/images/Founder1.jpg" alt="Co-Founder">
+                                        <img src="assets/images/Founder1.jpg" alt="Co-Founder" ondragstart="return false;">
                                         <strong style="font-size: 25px; color: #000;">Krishna Kumar</strong><br><strong style="font-size: 20px; color: #000;">Co-Founder</strong>
                                     </div>
 
