--- a/New Site 2023/index.html
+++ b/New Site 2023/index.html
@@ -196,7 +196,7 @@ Our Products:
                                 <div class="card-wrap">
                                     <div class="image-wrap">
                                         <img src="assets/images/Founder2.jpeg" alt="Founder" ondragstart="return false;">
-                                        <strong style="font-size: 25px; color: #000;">Bindu Krishna Kumar</strong> <br><strong style="font-size: 20px; color: #000;">Founder</strong>
+                                        <strong style="font-size: 15px; color: #000;">Mrs.Bindu Krishna Kumar</strong> <br><strong style="font-size: 15px; color: #000;">Founder</strong>
                                     </div>
 
                                 </div>
@@ -206,7 +206,7 @@ Our Products:
                                 <div class="card-wrap">
                                     <div class="image-wrap">
                                         <img src="assets/images/Founder1.jpg" alt="Co-Founder" ondragstart="return false;">
-                                        <strong style="font-size: 25px; color: #000;">Krishna Kumar</strong><br><strong style="font-size: 20px; color: #000;">Co-Founder</strong>
+                                        <strong style="font-size: 15px; color: #000;">Wg Cdr Krishna Kumar(R)</strong><br><strong style="font-size: 15px; color: #000;">Co-Founder</strong>
                                     </div>
 
                                 </div>
